--- a/src/view/joao-pessoa-npm.html
+++ b/src/view/joao-pessoa-npm.html
@@ -33,21 +33,65 @@
     </header>
 
     <main id="conteudo">
-        <ol>
+        <ol id="passos">
             <li class="passo">
-                <p class="instrucao">
-                    Para agendar um atendimento, baixe o aplicativo a seguir ...
-                </p>
+                <div class="instrucao">
+                    <span id="primeira"> 1 </span>
+
+                    <p>
+                        Para agendar um atendimento, <strong>baixe o aplicativo</strong> a seguir ...
+                    </p>
+                </div>
 
                 <iframe src="frames/tela-de-app-pesquisado-jpnpm.html" frameborder="0" class="img"></iframe>
             </li>
 
             <li class="passo">
-                <p class="instrucao">
-                    Na tela inicial, clique em “categorias” no canto inferior
-                </p>
+                <div class="instrucao">
+                    <p>
+                        Na tela inicial, clique em <strong>“categorias”</strong> no canto inferior
+                    </p>
 
-                <iframe src="frames/" frameborder="0" class="img"></iframe>
+                    <span id="segunda"> 2 </span>
+                </div>
+
+                <iframe src="frames/tela-inicial.html" frameborder="0" class="img"></iframe>
+            </li>
+
+            <li class="passo">
+                <div class="instrucao">
+                    <span id="terceira"> 3 </span>
+
+                    <p>
+                        Na categoria <strong>“Saúde”,</strong> clique em <strong>“LGBT+ e Igualdade Racial”</strong>
+                    </p>
+                </div>
+
+                <iframe src="frames/tela-de-categorias.html" frameborder="0" class="img"></iframe>
+            </li>
+
+            <li class="passo">
+                <div class="instrucao">
+                    <p>
+                        Escolha algum dos <strong>serviços disponíveis</strong> e clique no desejado
+                    </p>
+
+                    <span id="quarta"> 4 </span>
+                </div>
+
+                <iframe src="frames/tela-de-servicos.html" frameborder="0" class="img"></iframe>
+            </li>
+
+            <li class="passo">
+                <div class="instrucao">
+                    <span id="quinta"> 5 </span>
+
+                    <p>
+                        Preencha cada <strong>dado necessário</strong> e clique em <strong>“solicitar”</strong> no final
+                    </p>
+                </div>
+
+                <iframe src="frames/tela-de-servico-selecionado.html" frameborder="0" class="img"></iframe>
             </li>
         </ol>
 
