--- a/src/css/joao-pessoa-npm.css
+++ b/src/css/joao-pessoa-npm.css
@@ -2,45 +2,138 @@
 
 /* Cabeçalho */
 #cabecalho {
+    position: relative;
     background-image: linear-gradient(135deg, var(--amarela), var(--laranja));
     color: white;
-    padding: 1.5em;
-    padding-right: 1em;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    padding: 1em;
+    padding-top: 1.1em;
+}
+
+#cabecalho .voltar {
+    position: absolute;
+    top: 8%;
+    left: 1%;
+    border-radius: 50%;
+    padding: 1em 1.1em;
+    transition: .2s;
+}
+#cabecalho .voltar:hover {
+    background-color: rgba(255, 255, 255, 0.15);
+}
+#cabecalho .voltar:active {
+    background-color: rgba(255, 255, 255, 0.30);
+}
+#cabecalho .voltar span {
+    font-size: 2.5em;
 }
 
 #cabecalho .logo {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 0.6em;
 }
 #cabecalho .logo img {
-    width: 5vw;
+    width: 4.5vw;
     height: auto;
 }
 #cabecalho .logo .titulo {
     font: bolder 1.6em var(--titulo);
-    width: 85%;
+    width: 50%;
 }
 
 /* Conteúdo */
 #conteudo {
-    background: linear-gradient(180deg, var(--roxa) 0%, var(--verde) 25%, var(--amarela) 50%, var(--laranja) 75%, var(--vermelha) 100%);
-    padding: 0 26vw;
+    background: linear-gradient(180deg, var(--roxa) 0%, var(--verde) 25%, var(--amarela) 50%, var(--laranja) 75%, var(--rosa) 100%);
+    padding: 2.5em 20vw;
 }
 
-#conteudo ol .passo {
+#conteudo #passos {
     display: flex;
-    justify-content: space-between;
-    gap: 2em;
-    margin: 2em 0;
+    flex-direction: column;
+    gap: 20em;
 }
-#conteudo ol .passo .img {
+#conteudo #passos .passo {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1.5em;
+    animation: passo .2s ease-in-out both;
+    animation-timeline: view();
+    animation-range: cover 0% cover 100%;
+}
+#conteudo #passos .passo:first-child {
+    animation: primeiro-passo .2s ease-in-out both;
+    animation-timeline: view();
+    animation-range: cover 50% cover 95%;
+}
+#conteudo #passos .passo:nth-child(even) {
+    flex-direction: row-reverse;
+}
+#conteudo #passos .passo .instrucao {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+#conteudo #passos .passo .instrucao span {
+    background-color: white;
+    color: var(--roxa);
+    padding: .3em .5em .2em;
+    border-radius: 50%;
+    height: min-content;
+    width: min-content;
+    font-family: var(--titulo);
+    font-size: 3em;
+}
+#conteudo #passos .passo .instrucao p {
+    font-size: 1.2em;
+    line-height: 1.2em;
+}
+#conteudo #passos .passo .instrucao p:nth-child(odd) {
+    text-align: right;
+}
+#conteudo #passos .passo .img {
     border-radius: 30px;
-    background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+    background: white 50% / cover no-repeat;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
     width: 250px;
     height: 90vh;
+}
+
+#conteudo #topo {
+    position: fixed;
+    right: 2%;
+    bottom: 6%;
+    background-color: var(--amarela);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.158);
+    color: white;
+    border-radius: 50%;
+    padding: 1%;
+    font-size: 2.5em;
+    cursor: pointer;
+    transition-duration: .4s;
+    z-index: 1;
+    animation: fade .5s ease;
+}
+#conteudo #topo:hover,
+#conteudo #topo:focus-visible {
+    background-color: var(--laranja);
+}
+#conteudo #topo:active {
+    background-color: white;
+    color: var(--amarela);
+}
+#conteudo #topo:focus-visible {
+    outline: auto;
+}
+
+:root {
+    --rosa: #F2637E;
+    --roxa: #AD6AD9;
+    --verde: #04BF68;
+    --amarela: #F2BE5C;
+    --laranja: #F2A25C;
+    --titulo: 'inclusao';
+    --padrao: Arial, Helvetica, sans-serif;
+    --artistica: 'Acme', sans-serif;
 }
