--- a/src/view/joao-pessoa-npm.html
+++ b/src/view/joao-pessoa-npm.html
@@ -18,7 +18,7 @@
     <script src="../js/topo.js" defer></script>
 </head>
 <body>
-    <header id="cabecalho">
+    <header id="cabecalho" class="jpnpm">
         <a href="javascript: history.go(-1)" rel="prev" class="voltar">
             <span class="material-symbols-outlined sr-only" aria-hidden="true">
                 keyboard_backspace
@@ -32,7 +32,7 @@
         </figure>
     </header>
 
-    <main id="conteudo">
+    <main id="conteudo" class="jpnpm">
         <ol id="passos">
             <li class="passo">
                 <div class="instrucao">
