--- a/src/css/joao-pessoa-npm.css
+++ b/src/css/joao-pessoa-npm.css
@@ -16,6 +16,7 @@
     border-radius: 50%;
     padding: 1em 1.1em;
     transition: .2s;
+    z-index: 1;
 }
 #cabecalho .voltar:hover {
     background-color: rgba(255, 255, 255, 0.15);
@@ -125,15 +126,4 @@
 }
 #conteudo #topo:focus-visible {
     outline: auto;
-}
-
-:root {
-    --rosa: #F2637E;
-    --roxa: #AD6AD9;
-    --verde: #04BF68;
-    --amarela: #F2BE5C;
-    --laranja: #F2A25C;
-    --titulo: 'inclusao';
-    --padrao: Arial, Helvetica, sans-serif;
-    --artistica: 'Acme', sans-serif;
 }
