--- a/src/view/joao-pessoa-npm.html
+++ b/src/view/joao-pessoa-npm.html
@@ -43,6 +43,16 @@
                     </p>
                 </div>
 
+                <div class="downloads">
+                    <a href="https://play.google.com/store/apps/details?id=br.gov.pb.joaopessoa.prefeituraconectada" target="_blank" rel="noopener noreferrer" aria-label="">
+                        <img src="../img/disponivel-google-play-badge.png" alt="Ícone da Play Store">
+                    </a>
+                    
+                    <a href="https://apps.apple.com/br/app/jo%C3%A3o-pessoa-na-palma-da-m%C3%A3o/id6446417870" target="_blank" rel="noopener noreferrer" aria-label="">
+                        <img src="../img/disponivel-app-store-badge.png" alt="Ícone da App Store">
+                    </a>
+                </div>
+
                 <iframe src="frames/tela-de-app-pesquisado-jpnpm.html" frameborder="0" class="img"></iframe>
             </li>
 
