--- a/src/css/joao-pessoa-npm.css
+++ b/src/css/joao-pessoa-npm.css
@@ -108,11 +108,16 @@
     text-align: right;
 }
 #conteudo #passos .passo .img {
+    border-width: 0;
     border-radius: 30px;
-    /* background: white 50% / cover no-repeat; */
+    background: white 50% / cover no-repeat;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
     width: 250px;
-    height: 90vh;
+    min-height: 560px;
+    max-height: 90vh;
+}
+#conteudo #passos .passo .img:focus {
+    border: 10px solid black;
 }
 #conteudo #passos .passo .downloads {
     position: absolute;
