--- a/src/css/joao-pessoa-npm.css
+++ b/src/css/joao-pessoa-npm.css
@@ -78,6 +78,7 @@
 }
 #conteudo #passos .passo .instrucao span {
     background-color: white;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
     padding: .3em .5em .2em;
     border-radius: 50%;
     height: min-content;
@@ -115,9 +116,6 @@
     width: 250px;
     min-height: 560px;
     max-height: 90vh;
-}
-#conteudo #passos .passo .img:focus {
-    border: 10px solid black;
 }
 #conteudo #passos .passo .downloads {
     position: absolute;
