--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,7 +63,7 @@
     background-size: cover;
     animation: fade .5s ease;
     padding: 3em;
-    padding-bottom: 4em;
+    padding-bottom: 5em;
 }
 #conteudo #sobre .lugar p {
     background-color: #000000d8;
@@ -499,7 +499,7 @@
     background-color: white;
     color: var(--roxa);
     width: max-content;
-    padding: 0.5em 1em;
+    padding: 0.6em 1em .5em;
     border-radius: 0 0 2em 2em;
     box-shadow: 1px 1px 5px #00000013;
     text-align: center;
@@ -509,6 +509,8 @@
     animation-range: cover -10% cover 48%;
 }
 #rodape #autorias .quadro-de-links {
+    background-color: #ffffff00;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.03);
     border: 2px dashed white;
     border-radius: 2em;
     width: 50%;
