--- a/src/css/img-iframe.css
+++ b/src/css/img-iframe.css
@@ -1,17 +1,15 @@
-/* Reset breve */
-* {
-    margin: 0;
-    padding: 0;
+body {
+    background-color: white;
 }
 
+/* Rolagem */
 ::-webkit-scrollbar {
-    width: 0;
-    height: 0;
+    width: 10px;
 }
 
 /* Tamanho todo da imagem */
 #tela {
-    width: 100vw;
+    width: 100%;
     border-radius: 1em;
     background-color: white;
 }
