--- a/src/css/joao-pessoa-npm.css
+++ b/src/css/joao-pessoa-npm.css
@@ -5,6 +5,7 @@
     position: relative;
     background-image: linear-gradient(135deg, var(--amarela), var(--laranja));
     color: white;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
     padding: 1em;
     padding-top: 1.1em;
 }
@@ -127,6 +128,10 @@
 #conteudo #passos .passo .downloads a,
 #conteudo #passos .passo .downloads a img {
     border-radius: .5em;
+}
+#conteudo #passos .passo .downloads a img {
+    width: 100%;
+    height: 100%;
 }
 #conteudo #passos .passo .downloads a:focus-visible img,
 #conteudo #passos .passo .downloads a:hover img {
