--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
 #cabecalho {
     background-image: linear-gradient(135deg, var(--amarela), var(--laranja));
     color: white;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.05);
     padding: 1.5em;
     padding-right: 1em;
     display: flex;
