--- a/src/view/frames/tela-de-servico-selecionado.html
+++ b/src/view/frames/tela-de-servico-selecionado.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela</title>
+    <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/img-iframe.css">
 </head>
 <body>
