Melhora de Detalhes
Melhorando a visibilidade responsiva dos botões de download e os scrolls dos quadros de tela que não precisam de rolamento vertical

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -219,6 +219,7 @@
     }
     #conteudo.jpnpm #passos .passo:first-child {
         margin-bottom: 12em;
+        animation-range: cover 50% cover 125%;
     }
     #conteudo.jpnpm #passos .passo .img {
         width: 70vw;
