--- a/src/view/frames/tela-inicial.html
+++ b/src/view/frames/tela-inicial.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/img-iframe.css">
 </head>
-<body>
+<body style="overflow-y: hidden;">
     <img src="../../img/tela-inicial-jpnpm.jpg" alt="Print da tela inicial do aplicativo" id="tela">
 </body>
 </html>
