--- a/src/view/frames/tela-de-app-pesquisado-jpnpm.html
+++ b/src/view/frames/tela-de-app-pesquisado-jpnpm.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/img-iframe.css">
 </head>
-<body>
+<body style="overflow-y: hidden;">
     <img src="../../img/tela-de-app-pesquisado-jpnpm.jpg" alt="Print do aplicativo pesquisado na Play Store" id="tela">
 </body>
 </html>
