--- a/src/view/joao-pessoa-npm.html
+++ b/src/view/joao-pessoa-npm.html
@@ -59,13 +59,13 @@
             <li class="passo">
                 <div class="instrucao">
                     <p>
-                        Na tela inicial, clique em <strong>“categorias”</strong> no canto inferior
+                        Quando abrir, preencha seu <strong>CPF</strong> e <strong>data de nascimento.</strong>
                     </p>
 
                     <span id="segunda"> 2 </span>
                 </div>
 
-                <iframe src="frames/tela-inicial.html" frameborder="1" class="img"></iframe>
+                <iframe src="frames/tela-de-entrada-jpnpm.html" frameborder="1" class="img"></iframe>
             </li>
 
             <li class="passo">
@@ -73,8 +73,20 @@
                     <span id="terceira"> 3 </span>
 
                     <p>
+                        Na tela inicial, clique em <strong>“categorias”</strong> no canto inferior
+                    </p>
+                </div>
+
+                <iframe src="frames/tela-inicial.html" frameborder="1" class="img"></iframe>
+            </li>
+
+            <li class="passo">
+                <div class="instrucao">
+                    <p>
                         Na categoria <strong>“Saúde”,</strong> clique em <strong>“LGBT+ e Igualdade Racial”</strong>
                     </p>
+
+                    <span id="quarta"> 4 </span>
                 </div>
 
                 <iframe src="frames/tela-de-categorias.html" frameborder="1" class="img"></iframe>
@@ -82,11 +94,11 @@
 
             <li class="passo">
                 <div class="instrucao">
+                    <span id="quinta"> 5 </span>
+                    
                     <p>
                         Escolha algum dos <strong>serviços disponíveis</strong> e clique no desejado
                     </p>
-
-                    <span id="quarta"> 4 </span>
                 </div>
 
                 <iframe src="frames/tela-de-servicos.html" frameborder="1" class="img"></iframe>
@@ -94,11 +106,11 @@
 
             <li class="passo">
                 <div class="instrucao">
-                    <span id="quinta"> 5 </span>
-
                     <p>
                         Preencha cada <strong>dado necessário</strong> e clique em <strong>“solicitar”</strong> no final
                     </p>
+
+                    <span id="sexta"> 6 </span>
                 </div>
 
                 <iframe src="frames/tela-de-servico-selecionado.html" frameborder="1" class="img"></iframe>
